fix: scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,31 @@
 // Import Main styles for this application
 @import './scss/style.scss';
 
+/* Scrollbar */
+$background-color: white;
+$main-color: gray;
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $main-color $background-color;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 7px;
+}
+
+*::-webkit-scrollbar-track {
+  background: $background-color;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $main-color;
+  border-radius: 20px;
+  border: 2px solid $background-color;
+}
+
 /* Header */
 
 .logo {
